<resources>
    <string name="app_name">GH News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="categories">CATEGORIES</string>
    <string name="education">Education</string>
    <string name="security">Security</string>
    <string name="governance">Governance</string>
    <string name="economics">Economics</string>
    <string name="entertainment">Entertainment</string>
    <string name="action_settings">Settings</string>\
    <string name="acc_settings">Account Settings</string>
    <string name="app_logo">logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
