<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/acc_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/acc_settings" />
     <!--   <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" /> -->
    </group>

    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/education"
                android:title="@string/education" />
            <item
                android:id="@+id/security"
                android:title="@string/security" />
            <item
                android:id="@+id/governance"
                android:title="@string/governance" />
            <item
                android:id="@+id/economics"
                android:title="@string/economics" />
            <item
                android:id="@+id/entertainment"
                android:title="@string/entertainment" />
        </menu>
    </item>

</menu>
